--- a/options.html
+++ b/options.html
@@ -33,15 +33,14 @@
             <label>IBM PC</label>
             <br>
             <label for="rsfiso9"><input type="radio" name="font" value="iso9" id="rsfiso9"> <strong>ISO 9</strong>px</label>
-            <br>
-            <label for="rsfiso8"><input type="radio" name="font" value="iso8" id="rsfiso8"> <strong>ISO 8</strong>px</label>
+            <label for="rsfiso8" title="Is a recommended font for viewing text art"><input type="radio" name="font" value="iso8" id="rsfiso8"> <strong>8</strong>px <i class="material-icons material-radio">color_lens</i></label>
             <br>
             <label for="rsfps24"><input type="radio" name="font" value="ps24" id="rsfps24"> <strong>PS/2</strong> thin font 4</label>
             <br>
             <label for="rsf9"><input type="radio" name="font" value="vga9" id="rsf9"> <strong>VGA 9</strong>px</label>
             <label for="rwf6"><input type="radio" name="font" value="vga9-2x" id="rwf6"><i class="material-icons material-radio">swap_horiz</i></label>
             <br>
-            <label for="rsf8" title="VGA 8 is the recommended font for viewing ASCII art"><input type="radio" name="font" value="vga8" id="rsf8"> <strong>VGA 8</strong>px <i class="material-icons material-radio">color_lens</i></label>
+            <label for="rsf8" title="Is a recommended font for viewing text art"><input type="radio" name="font" value="vga8" id="rsf8"> <strong>VGA 8</strong>px <i class="material-icons material-radio">color_lens</i></label>
             <label for="rwf5"><input type="radio" name="font" value="vga8-2x" id="rwf5"><i class="material-icons material-radio">swap_horiz</i></label>
             <br>
             <label for="rsf6"><input type="radio" name="font" value="ega9" id="rsf6"> <strong>EGA 9</strong>px</label>
@@ -76,27 +75,20 @@
             <label for="rsf12"><input type="radio" name="font" value="vgalcd" id="rsf12"> <strong>VGA LCD</strong> laptop</label>
           </div>
           <div class="flexed-cols tab-pane-right">
-            <label>Amiga</label>
+            <label>Amiga &amp; Commodore</label>
             <br>
-            <label for="rsf13"><input type="radio" name="font" value="topazA500" id="rsf13"> <strong>Topaz</strong> (Kickstart 1.x)</label>
+            <label for="rsft2"><input type="radio" name="font" value="topazA1200" id="rsft2"> <strong>Kickstart 2</strong></label>
+            <label for="rsft2p" title="Is a recommended font for viewing text art"><input type="radio" name="font" value="topazplusA1200" id="rsft2p"> Plus <i class="material-icons material-radio">color_lens</i></label>
             <br>
-            <label for="rsft2"><input type="radio" name="font" value="topazA1200" id="rsft2"> <strong>Topaz 2</strong> (Kickstart 2.x)</label>
-            <br>
-            <label>(unofficial)</label>
-            <br>
-            <label for="rsf13a"><input type="radio" name="font" value="topazplusA500" id="rsf13a"> <strong>Topaz+</strong></label>
-            <br>
-            <label for="rsft2p"><input type="radio" name="font" value="topazplusA1200" id="rsft2p"> <strong>Topaz 2+</strong></label>
+            <label for="rsf13"><input type="radio" name="font" value="topazA500" id="rsf13"> <strong>Kickstart 1</strong></label>
+            <label for="rsf13a" title="Is a recommended font for viewing text art"><input type="radio" name="font" value="topazplusA500" id="rsf13a"> Plus <i class="material-icons material-radio">color_lens</i></label>
             <br>
             <label for="rsftmk"><input type="radio" name="font" value="microknight" id="rsftmk"> <strong>MicroKnight</strong></label>
-            <br>
-            <label for="rsftmkp"><input type="radio" name="font" value="microknightplus" id="rsftmkp"> <strong>MicroKnight+</strong></label>
+            <label for="rsftmkp" title="Is a recommended font for viewing text art"><input type="radio" name="font" value="microknightplus" id="rsftmkp"> Plus <i class="material-icons material-radio">color_lens</i></label>
             <br>
             <label for="rsftpn"><input type="radio" name="font" value="p0tnoodle" id="rsftpn"> <strong>P0T-NOoDLE</strong></label>
             <br>
             <label for="rsftmOsOul"><input type="radio" name="font" value="mosoul" id="rsftmOsOul"> <strong>mOsOul</strong></label>
-            <br><br>
-            <label>Commodore</label>
             <br>
             <label for="rsf14"><input type="radio" name="font" value="c64" id="rsf14"> <strong>PETSCII</strong> (VIC-20, C64...)</label>
             <br><br>
@@ -109,6 +101,10 @@
             <label for="rsf16"><input type="radio" name="font" value="atarist" id="rsf16"> <strong>TOS</strong> (ST series, 16-bit)</label>
             <br>
             <label for="rsf8ata"><input type="radio" name="font" value="atascii" id="rsf8ata"> <strong>ATASCII</strong> (8-bit)</label>
+            <br><br>
+            <label>Browser</label>
+            <br>
+            <label for="rsfmono"><input type="radio" name="font" value="monospace" id="rsfmono"> <strong>Monospace</strong> fixed-width</label>
             <br>
           </div>
         </form>
@@ -158,7 +154,7 @@
             </div>
           </div>
           <div class="flexed-cols tab-pane-right" id="font-styles-effects">
-            <label><input type="checkbox" id="text-font-information"><i class="material-icons material-check">info_outline</i>Text &amp; font information</label>
+            <label><input type="checkbox" id="text-font-information"><i class="material-icons material-check">info_outline</i>Information header</label>
             <br>
             <label><input type="checkbox" id="center-alignment"><i class="material-icons material-check">format_align_center</i><span class="msg-center">Center</span> align text</label>
             <br>
@@ -180,21 +176,27 @@
       </section>
       <section class="tabcontent" id="tab3">
         <div id="advanced-options">
-          <label><input type="checkbox" id="run-web-urls"><i class="material-icons material-check">cloud_queue</i>Apply RetroTxt to any text files hosted on these websites</label>
+          <label><input type="checkbox" id="run-web-urls"><i class="material-icons material-check">web</i>Apply RetroTxt to any text files hosted on these websites</label>
           <br>
-          <label><input type="text" id="run-web-urls-permitted" value="" disabled></label>
-          <br><br>
+          <label><textarea id="run-web-urls-permitted" rows="6" disabled></textarea></label>
+          <!--<input type="text" id="run-web-urls-permitted" value="" disabled>-->
+          <br>
           <div id="run-file-urls-div">
             <label><input type="checkbox" id="run-file-urls"><i class="material-icons material-check" id="run-file-urls-icon">folder_open</i>Apply RetroTxt to any local text files <code><a href="file:///c:/" id="run-file-urls-link" target="_blank">file:///</a></code></label>
           </div>
           <div id="run-file-downloads-div">
             <label><input type="checkbox" id="run-file-downloads"><i class="material-icons material-check" id="run-file-downloads-icon">file_download</i>Apply RetroTxt to any downloaded text files</label>
           </div>
+          <br>
+          <div id="updated-notice-div">
+            <label><input type="checkbox" id="updated-notice"><i class="material-icons material-check" id="updated-notice-icon">system_update_alt</i>RetroTxt updated notices</label>
+            <br><em>Launches the <strong>Welcome to RetroTxt</strong> tab when RetroTxt is updated to its newest version</em>
+          </div>
         </div>
       </section>
       <section class="tabcontent" id="tab4">
         <div id="technobable"><span id="manifest">RetroTxt</span></div>
-        <div><a href="http://retrotxt.com">retrotxt.com</a></div>
+        <div><a href="https://retrotxt.com">retrotxt.com</a></div>
         <p>ANSI Logo</p>
         <ul>
           <li title="ANSI logo by Zeus II [Blocktronics] [FUEL]"><a href="https://twitter.com/Zeus_II">Zeus II</a></li>
@@ -222,7 +224,7 @@
       <hr>
       <div id="option-buttons">
         <a href="https://github.com/bengarrett/RetroTxt/blob/master/README.md" class="help-button" target="_blank" title="Help and readme"><i class="material-icons">help_outline</i></a>
-        <a href="welcome.html" class="link-button" id="unittest" target="_blank" title="Welcome"><i class="material-icons">info_outline</i></a>
+        <a href="welcome.html" class="link-button" target="_blank" title="Welcome"><i class="material-icons">info_outline</i></a>
         <a href="https://github.com/bengarrett/RetroTxt" class="link-button" target="_blank" title="Get the source code hosted on GitHub"><i class="material-icons">code</i></a>
         <a href="test/index.html" class="link-button" id="unittest" target="_blank" title="Unit tests (this will reset all changed Options!)"><i class="material-icons">bug_report</i></a>
       </div>
