addons.mozilla.org fixes
Fixed lint issues that triggered warnings on addons.mozilla.org
Minor misc corrections of texts

--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
   <script src="qunit-2.4.0.js"></script>
   <script src="tests.js"></script>
   <script src="../eventpage.js"></script>
-  <script src="../functions.js"></script>>
+  <script src="../functions.js"></script>
   <script src="../options.js"></script>
   <script src="../retrotxt.js"></script>
   <script src="../text_ecma48.js"></script>
