--- a/html/options_chrome.html
+++ b/html/options_chrome.html
@@ -413,9 +413,10 @@
               <input type="checkbox" id="run-web-urls"></label>
           </div>
         </div>
+        <div id="please-apply">Please click this checkbox to apply your new setting <strong>⤴</strong></div>
         <div class="config-row">
           <label>
-            <textarea id="run-web-urls-permitted" rows="3" disabled></textarea>
+            <textarea id="run-web-urls-permitted" rows="4"></textarea>
           </label>
         </div>
         <!-- apply to downloads -->
