--- a/html/options_firefox.html
+++ b/html/options_firefox.html
@@ -419,6 +419,7 @@
       <!-- Config tab -->
       <section class="tabcontent" id="tab3">
         <!-- apply to websites -->
+        <div id="please-apply">Please click this checkbox to apply your new setting</div>
         <div class="config block">
           <div class="config-content">
             <i class="material-icons">web</i>
