--- a/html/options_firefox.html
+++ b/html/options_firefox.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<!-- cSpell:ignore rsfibmplex,CHOOL -->
 <html>
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../fonts/material/iconfont/material-icons.css">
+  <link rel="stylesheet" href="../css/material-icons.css">
   <link rel="stylesheet" href="../css/retrotxt.css">
   <link rel="stylesheet" href="../css/options_firefox.css">
   <link rel="stylesheet" href="../css/text_colors.css">
@@ -49,6 +48,14 @@
                 <label class="browser-style" for="rsfmono" title="Firefox default font">
                   <input type="radio" name="font" value="monospace" id="rsfmono">
                   <strong>Monospace</strong></label>
+              </div>
+              <div class="block">
+                <label class="browser-style" for="rsfunscii16">
+                  <input type="radio" name="font" value="unscii16" id="rsfunscii16">
+                  <strong>Unscii</strong> 16</label>
+                <label class="browser-style" for="rsfunscii8">
+                    <input type="radio" name="font" value="unscii8" id="rsfunscii8">
+                    <strong>Unscii</strong> 8</label>
               </div>
             </div>
           </div>
@@ -537,7 +544,7 @@
         </div>
         <div class="about block">
           <div class="about-title"></div>
-          <div class="about-content font-ibmplex">IBM Plex</div>
+          <div class="about-content"><span class="font-ibmplex" style="font-size: 0.85em">IBM Plex</span></div>
           <div class="about-link"><a href="https://github.com/IBM/plex">IBM Corp.</a></div>
         </div>
         <div class="about block">
