--- a/html/welcome.html
+++ b/html/welcome.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-<!-- cSpell:ignore CHOOL -->
 
 <head>
   <meta charset="utf-8">
@@ -39,12 +38,12 @@
   </div>
   <menu>
     <h1>Welcome to
-      <strong>RetroTxt</strong>, the extension that turn pieces of
+      <strong>RetroTxt</strong>, the extension that turns pieces of
       <a href="https://breakintochat.com/wiki/ANSI_art">ANSI text art</a> and
       <a href="https://en.wikipedia.org/wiki/ASCII_art">ASCII, NFO plain text</a> into HTML.
     </h1>
     <div id="rt-permission">
-      <p>To enable the full functionality of RetroTxt you need to select some <em>Apply RetroTxt to</em> checkboxes in the
+      <p>To enable the full functionality of RetroTxt, you need to select some <em>Apply RetroTxt to</em> checkboxes in the
         <a href="#" class="optionsLink">Config Options</a>. Each setting is optional but will require additional browser
         permissions.</p>
       <div style="display: flex;align-items: center;justify-content: center;">
@@ -99,8 +98,8 @@
   <main>
     <menu>
       <h2>Samples</h2>
-      <p>Here are a few links to sample ANSI and ASCII art works to get you started. You can identify RetroTxt tabs in
-        <span id="browser">your browser</span> as they are marked with this
+      <p>Here are a few links to sample ANSI and ASCII artworks to get you started. You can identify marked RetroTxt tabs in
+        <span id="browser">your browser</span> with this
         <code id="mark">[··]</code> prefix.</p>
       <div class="flex-container" id="cards">
         <div class="flex-item">
@@ -337,6 +336,9 @@
         </li>
         <li class="tooltip" title="IBM Plex">IBM Plex
           <a href="https://github.com/IBM/plex">IBM Corp.</a>
+        </li>
+        <li class="tooltip" title="Unscii">Unscii
+          <a href="http://pelulamu.net/unscii/">Viznut</a>
         </li>
         <li class="tooltip" title="Material Design icons">UI
           <a href="https://google.github.io/material-design-icons/">Google</a>
