--- a/html/welcome.html
+++ b/html/welcome.html
@@ -363,7 +363,7 @@
         </li>
       </ul>
       <ul>
-        <li>Text art</li>
+        <li>Text art collections</li>
         <li>
           <a href="https://16colo.rs">16 colors</a>
         </li>
@@ -372,6 +372,18 @@
         </li>
         <li>
           <a href="https://defacto2.net/file/list?output=card&platform=ansi&section=-&sort=date_desc&perpage=100&page=1">defacto2</a>
+        </li>
+      </ul>
+      <ul>
+        <li>Documentary</li>
+        <li>
+          <a href="https://vimeo.com/341663153">The Art Of Warez</a> - short film on vimeo
+        </li>
+        <li>
+          <a href="https://www.vice.com/en_us/article/43ze39/the-famous-nesticle-emulators-stolen-source-code-has-been-preserved">The Lost Art of Warez</a> - VICE
+        </li>
+        <li>
+          <a href="http://thenewordermag.com/tno/the-art-of-warez">THE ART OF WAREZ</a> - THE NEW ORDER
         </li>
       </ul>
       <h2>Credits</h2>
