--- a/html/welcome.html
+++ b/html/welcome.html
@@ -29,6 +29,8 @@
   <div class="notice" id="welcome_banner">This copy of RetroTxt has been updated to v
     <span id="rt-updated">?.?</span>.
     <a href="#" id="changesLink">See what's new.</a>
+    <p id="5star-firefox" class="hidden"><a href="https://addons.mozilla.org/en-US/firefox/addon/retrotxt/reviews/">If you enjoy this extension, it would be fantastic for our exposure to leave a 5-star review on Firefox Add-ons.</a></p>
+    <p id="5star-chrome" class="hidden"><a href="https://chrome.google.com/webstore/detail/retrotxt/gkjkgilckngllkopkogcaiojfajanahn">If you enjoy this extension, it would be fantastic for our exposure to leave a 5-star rating <em>Review</em> on the Chrome Web Store.</a></p>
   </div>
   <div class="notice" id="welcome_banner-ui">
     <small>
@@ -371,7 +373,7 @@
           <a href="http://artscene.textfiles.com">art scene</a>
         </li>
         <li>
-          <a href="https://defacto2.net/file/list?output=card&platform=ansi&section=-&sort=date_desc&perpage=100&page=1">defacto2</a>
+          <a href="https://defacto2.net/file/list?output=card&platform=ansi&section=-&sort=date_desc">defacto2</a>
         </li>
       </ul>
       <ul>
