--- a/html/options_firefox.html
+++ b/html/options_firefox.html
@@ -47,6 +47,11 @@
                   <strong>IBM Plex</strong> Mono</label>
               </div>
               <div class="block">
+                <label class="browser-style" for="rsspleen">
+                  <input type="radio" name="font" value="spleen" id="rsspleen">
+                  <strong>Spleen</strong></label>
+              </div>
+              <div class="block">
                 <label class="browser-style" for="rsfmono" title="Firefox default font">
                   <input type="radio" name="font" value="monospace" id="rsfmono">
                   <strong>Monospace</strong></label>
@@ -597,10 +602,20 @@
           <div class="about-content font-ega9">IBM PC & MS-DOS</div>
           <div class="about-link"><a href="http://int10h.org/oldschool-pc-fonts/">Viler</a></div>
         </div>
-        <div class="about block separator-block">
+        <div class="about block">
           <div class="about-title"></div>
           <div class="about-content font-mona">Mona Shift JIS</div>
           <div class="about-link"><a href="http://monafont.sourceforge.net/index-e.html">public domain</a></div>
+        </div>
+        <div class="about block">
+          <div class="about-title"></div>
+          <div class="about-content font-mona">Spleen</div>
+          <div class="about-link"><a href="https://github.com/fcambus/spleen">Frederic Cambus</a></div>
+        </div>
+        <div class="about block separator-block">
+          <div class="about-title"></div>
+          <div class="about-content font-mona">Unscii</div>
+          <div class="about-link"><a href="http://pelulamu.net/unscii/">Viznut</a></div>
         </div>
         <div class="about block">
           <div class="about-title">Icons</div>
@@ -619,7 +634,7 @@
       <a href="welcome.html" target="_blank" class="link-button" title="Welcome"><i class="material-icons">home</i></a>
       <a href="https://github.com/bengarrett/RetroTxt" class="link-button" title="Get the source code hosted on GitHub"><i
           class="material-icons">code</i></a>
-      <a href="../test/index.html" target="_blank" class="link-button" id="unittest" title="Unit tests (this will also reset all Options)"><i
+      <a href="../test/index.html?hidepassed" target="_blank" class="link-button" id="unittest" title="Unit tests (this will also reset all Options)"><i
           class="material-icons">bug_report</i></a>
     </div>
   </footer>
