--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <h3>When the Unit Tests complete, RetroTxt needs reloading.</h3>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="/node_modules/qunit/qunit/qunit.js"></script>
