--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -136,15 +136,18 @@
                 </p>
               </div>
             </div>
-            <div class="notice is-hidden" id="welcomeNotice">
+            <div class="notice is-hidden" id="newInstallNotice">
               <div class="notification is-success is-light">
+                <p class="mb-2">Welcome to RetroTxt!</p>
                 <p>
-                  Welcome to RetroTxt! To improve the functionality you should enable
-                  <em>Run RetroTxt on files hosted on these domains</em>
-                  in the <a id="welcomeSettings">Settings</a> tab.
+                  To enhance its functionality, you can add new websites and enable <strong>Run
+                    RetroTxt on files hosted on these domains</strong> in the <a id="newInstallSettings">Settings
+                    tab</a>.<br>The <a id="newInstallDisplay">Display tab</a> contains the theming and style options,
+                  while <a id="newInstallFonts">Fonts</a> lets you choose one of many font families.
                 </p>
                 <p class="mt-2">
-                  The <a id="welcomeSamples">Samples</a> tab offers a small gallery of text art to get you started.
+                  Also, the <a id="newInstallSamples">Samples</a> tab offers a small gallery of text art to get you
+                  started.
                 </p>
               </div>
             </div>
