--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -232,7 +232,8 @@
                       <li>
                         <a href="http://members.bitstream.net/marksim/atarimac/fonts.html"><strong>Mark L.
                             Simonson</strong>, Atari Classic
-                          <p class="is-size-7">Atari 8-Bit</p></a>
+                          <p class="is-size-7">Atari 8-Bit</p>
+                        </a>
                       </li>
                       <li>
                         <a href="https://animation.dk"><strong>Niels Krogh Mortensen/Nölb/Grafictive</strong>,
@@ -240,7 +241,8 @@
                       </li>
                       <li>
                         <a href="https://github.com/rbanffy/3270font"><strong>Ricardo Banffy</strong>, 3270
-                          <p class="is-size-7">IBM 3270</p></a>
+                          <p class="is-size-7">IBM 3270</p>
+                        </a>
                       </li>
                       <li>
                         <a href="https://github.com/rewtnull/amigafonts"><strong>tRUEsCHOOL</strong>, Multi Platform
@@ -248,7 +250,8 @@
                       </li>
                       <li>
                         <a href="http://style64.org/c64-truetype"><strong>Style</strong>, C64 Pro
-                          <p class="is-size-7">Commodore 8-bit</p></a>
+                          <p class="is-size-7">Commodore 8-bit</p>
+                        </a>
                       </li>
                       <li>
                         <a href="http://pelulamu.net/unscii"><strong>Viznut</strong>, Unscii</a>
@@ -766,7 +769,8 @@
                   <p class="is-size-7">
                     Fonts support the English alphabet 126 character encoding (US-ASCII);
                     <u>Marked</u> fonts support iso 8859-1 or cp1252; <span class="has-text-success">Marked</span>
-                    fonts support Unicode Symbols for Legacy Computing</p>
+                    fonts support Unicode Symbols for Legacy Computing
+                  </p>
                   <hr>
                   <a id="navAmiga"></a>
                   <!-- Amiga -->
@@ -904,13 +908,14 @@
                     </label>
                     <label class="radio" for="lisaacronym">
                       <input type="radio" name="font" id="lisaacronym" value="lisaacronym"> Helv7rp
-                      <label class="radio" for="lisapaper">
-                        <label class="radio" for="lisapaper">
-                          <input type="radio" name="font" id="lisapaper" value="lisapaper"> Terminal
-                        </label> <label class="radio" for="lisapapersmall">
-                          <input type="radio" name="font" id="lisapapersmall" value="lisapapersmall"> Terminal
-                          (small)
-                        </label>
+                    </label>
+                    <label class="radio" for="lisapaper">
+                      <input type="radio" name="font" id="lisapaper" value="lisapaper"> Terminal
+                    </label>
+                    <label class="radio" for="lisapapersmall">
+                      <input type="radio" name="font" id="lisapapersmall" value="lisapapersmall"> Terminal
+                      (small)
+                    </label>
                   </div>
                   <hr>
                   <!-- Apple Mac -->
@@ -1074,7 +1079,8 @@
                     <h1 class="title is-size-3 has-text-dark mb-2">IBM PC &amp; family</h1>
                     <p class="is-size-7">Fonts support the original IBM PC, 256 character encoding (codepage 437);
                       <u>marked</u> fonts
-                      expands support to some 780 characters</p>
+                      expands support to some 780 characters
+                    </p>
                     <hr>
                     <h2 class="title has-text-dark is-size-6 ">IBM PC BIOS <span
                         class="has-text-weight-normal">(includes Jr., XT, AT,
@@ -1498,7 +1504,8 @@
                     <h1 class="title is-size-3 has-text-dark mb-2">MS-DOS compatibles</h1>
                     <p class="is-size-7">Fonts support the original IBM PC, 256 character encoding (codepage 437);
                       <u>marked</u> fonts
-                      expands support to some 780 characters</p>
+                      expands support to some 780 characters
+                    </p>
                     <hr>
                     <h2 class="title has-text-dark is-size-6 ">Acer 710 <span class="has-text-weight-normal">on-board
                         video</span></h2>
@@ -2011,7 +2018,8 @@
                     <h1 class="title is-size-3 has-text-dark mb-2">Video hardware</h1>
                     <p class="is-size-7">Fonts support the original IBM PC, 256 character encoding (codepage 437);
                       <u>marked</u> fonts
-                      expands support to some 780 characters</p>
+                      expands support to some 780 characters
+                    </p>
                     <hr>
                     <h2 class="title has-text-dark is-size-6  mb-2">Acer M3125 VGA BIOS</h2>
                     <label class="radio" for="web_acer_vga_8x8">
@@ -2395,7 +2403,8 @@
                     <h1 class="title is-size-3 has-text-dark mb-2">Semi-compatibles</h1>
                     <p class="is-size-7">Fonts support the original IBM PC, 256 character encoding (codepage 437);
                       <u>marked</u> fonts
-                      expands support to some 780 characters</p>
+                      expands support to some 780 characters
+                    </p>
                     <hr>
                     <h2 class="title has-text-dark is-size-6 ">ACT Apricot series - PC, Xi, F1, F2, Xen</h2>
                     <p class="subtitle has-text-dark is-size-7 mb-2">Provides 80x25 text on the Apricot 800x400
@@ -2723,7 +2732,8 @@
                           class="msg-artifact">artifact</span>s when showing block characters in sequences.
                         This option implements a <code>text-shadow:1px</code> CSS property to all block characters
                         to correct this at the expense font sharpness.
-                        <span class="has-text-info">Any open tabs will require a reload.</span></p>
+                        <span class="has-text-info">Any open tabs will require a reload.</span>
+                      </p>
                       <p class="is-size-7 mt-2 mb-1">standard text</p>
                       <p name="display-sample-text" class="font-ibm_vga_8x16 has-text-weight-normal">◘░▒▓███▄▐▌▀███■
                         ABCabc</p>
@@ -2812,7 +2822,8 @@
                     <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">Unless
                       SAUCE width information exists, this enforces an 80 character width for all
                       ANSI files to emulate the classic 80 column terminal screen.
-                      <span class="has-text-info">Any open tabs will require a reload.</span></p>
+                      <span class="has-text-info">Any open tabs will require a reload.</span>
+                    </p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
                         class="has-text-success">on</span>
                   </div>
@@ -2883,55 +2894,67 @@
                       <tr>
                         <td class="control theme-msdos-fg theme-msdos-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-msdos" id="theme-msdos">
-                          <label for="theme-msdos" class="radio">MS-DOS</label></td>
+                          <label for="theme-msdos" class="radio">MS-DOS</label>
+                        </td>
                         <td class="control theme-windows-fg theme-windows-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-windows"
                             id="theme-windows">
-                          <label for="theme-windows" class="radio">Windows</label></td>
+                          <label for="theme-windows" class="radio">Windows</label>
+                        </td>
                         <td class="theme-amiga-fg theme-amiga-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-amiga" id="theme-amiga">
-                          <label for="theme-amiga" class="radio">Amiga</label></td>
+                          <label for="theme-amiga" class="radio">Amiga</label>
+                        </td>
                       </tr>
                       <tr>
                         <td class="control theme-c64-fg theme-c64-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-c64" id="theme-c64">
-                          <label for="theme-c64" class="radio">C64</label></td>
+                          <label for="theme-c64" class="radio">C64</label>
+                        </td>
                         <td class="control theme-appleii-fg theme-appleii-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-appleii"
                             id="theme-appleii">
-                          <label for="theme-appleii" class="radio">Apple II</label></td>
+                          <label for="theme-appleii" class="radio">Apple II</label>
+                        </td>
                         <td class="control theme-atarist-fg theme-atarist-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-atarist"
                             id="theme-atarist">
-                          <label for="theme-atarist" class="radio">Atari ST</label></td>
+                          <label for="theme-atarist" class="radio">Atari ST</label>
+                        </td>
                       </tr>
                       <tr>
                         <td class="control theme-white-on-black-fg theme-white-on-black-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-white-on-black"
                             id="theme-white-on-black">
-                          <label for="theme-white-on-black" class="radio">white on dark</label></td>
+                          <label for="theme-white-on-black" class="radio">white on dark</label>
+                        </td>
                         <td class="control theme-amber-on-black-fg theme-amber-on-black-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-amber-on-black"
                             id="theme-amber-on-black">
-                          <label for="theme-amber-on-black" class="radio">amber on dark</label></td>
+                          <label for="theme-amber-on-black" class="radio">amber on dark</label>
+                        </td>
                         <td class="control theme-green-on-black-fg theme-green-on-black-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-green-on-black"
                             id="theme-green-on-black">
-                          <label for="theme-green-on-black" class="radio">green on dark</label></td>
+                          <label for="theme-green-on-black" class="radio">green on dark</label>
+                        </td>
                       </tr>
                       <tr>
                         <td class="control theme-black-on-white-fg theme-black-on-white-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-black-on-white"
                             id="theme-black-on-white">
-                          <label for="theme-black-on-white" class="radio">white on light</label></td>
+                          <label for="theme-black-on-white" class="radio">white on light</label>
+                        </td>
                         <td class="control theme-amber-on-white-fg theme-amber-on-white-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-amber-on-white"
                             id="theme-amber-on-white">
-                          <label for="theme-amber-on-white" class="radio">amber on light</label></td>
+                          <label for="theme-amber-on-white" class="radio">amber on light</label>
+                        </td>
                         <td class="control theme-green-on-white-fg theme-green-on-white-bg">
                           <input type="radio" class="radio" name="text-pair-form" value="theme-green-on-white"
                             id="theme-green-on-white">
-                          <label for="theme-green-on-white" class="radio">green on light</label></td>
+                          <label for="theme-green-on-white" class="radio">green on light</label>
+                        </td>
                       </tr>
                       <tr>
                         <td class="control" colspan="3" id="textPairCustomContainer">
@@ -2999,7 +3022,8 @@
                         </tr>
                       </table>
                       <h3 class="title has-text-dark is-size-6 mt-1">
-                        <input type="radio" name="palette" value="vga" id="colorPaletteVGA" /> IBM VGA</h3>
+                        <input type="radio" name="palette" value="vga" id="colorPaletteVGA" /> IBM VGA
+                      </h3>
                     </label>
                   </div>
                   <div class="column is-half table-container mb-0">
@@ -3017,7 +3041,8 @@
                         </tr>
                       </table>
                       <h3 class="title has-text-dark is-size-6 mt-1">
-                        <input type="radio" name="palette" value="xterm" id="colorPaletteXTerm" /> XTerm</h3>
+                        <input type="radio" name="palette" value="xterm" id="colorPaletteXTerm" /> XTerm
+                      </h3>
                     </label>
                   </div>
                   <div class="column is-half table-container mb-0">
@@ -3224,7 +3249,8 @@
                         Your browser can display text files stored on your PC using the file URL scheme.
                         <br><code>file:///</code><br>
                         With this option, RetroTxt renders all text files using file URLs,
-                        allowing you to use this browser as a text file viewer.</p>
+                        allowing you to use this browser as a text file viewer.
+                      </p>
                       <p class="subtitle has-text-weight-bold has-text-dark mb-0 is-size-7">recommend <span
                           class="has-text-grey">off</span> <span class="has-text-weight-normal">(unless
                           this feature is wanted)</span>
