Allow hosts with custom ports for saved domains.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3217,7 +3217,7 @@
                               </button>
                             </p>
                           </div>
-                          <p class="help">Only the hostname is saved</p>
+                          <p class="help">Only the host is saved</p>
                         </div>
                       </div>
 
